--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "bcrypt": "^5.1.1",
+    "mongoose": "^8.3.4",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
