--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@ BASE_URL=http://localhost:3000/
 #NEXT_PUBLIC_BASE_URL=https://gadget-storebd.vercel.app/
 NEXT_PUBLIC_BASE_URL=http://localhost:3000/
 
+GOOGLE_CLIENT_ID=801748148316-9dkco504uv7tjlh078dmqmbqh411rfbv.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
 MONGODB_URI=mongodb+srv://gadget-storebd:WJqb12kP4tHYGEB2@cluster0.nswkl.mongodb.net/lws-kart?retryWrites=true&w=majority
