--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.0.0",
     "bcrypt": "^5.1.1",
+    "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
