--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "sharp": "^0.33.3"
   },
   "devDependencies": {
